Subir proyecto: contador BJ con mejoras de reconocimiento de voz (modo rápido, normalización estricta, alias 'haz/has' para As)

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,19 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Footer from '../sections/Footer.astro';
+import Header from '../sections/Header.astro';
+import Hero from '../sections/Hero.astro';
 ---
 
 <Layout>
-	<Welcome />
+	<Header />
+	<Hero />
+	<footer class="p-4 text-center">
+		<a href="/login" class="underline">Ir a Login</a>
+		<span class="mx-2">·</span>
+		<a href="/register" class="underline">Crear cuenta</a>
+	</footer>
 </Layout>
+
+
+
